# kllmgate

./: .gitignore  README.md  config.example.toml  kllmgate.py  kllmgate_legacy.py  pyproject.toml
deploy/: supervisor.example.ini
docs/: 架构设计.md  架构设计草稿.md  详细设计.md
kllmgate/: __main__.py  config.py  pipeline.py  sse.py
kllmgate/converters/: __init__.py  anthropic_messages_to_openai_chat.py  openai_chat_to_anthropic_messages.py  openai_chat_tool_adapt.py  openai_responses_to_openai_chat.py  openai_responses_tool_adapt.py
kllmgate/tools/: __init__.py  anthropic.py
kllmgate/upstream/: client.py
src/kllmgate/: __init__.py  __main__.py  app.py  config.py  errors.py  log.py  models.py  models_catalog.py  pipeline.py  thinking.py  utils.py
src/kllmgate/converters/: __init__.py  _helpers.py  anthropic_messages_to_openai_chat.py  anthropic_messages_to_openai_responses.py  openai_chat_to_anthropic_messages.py  openai_chat_to_openai_responses.py  openai_chat_tool_adapt.py  openai_responses_to_anthropic_messages.py  openai_responses_to_openai_chat.py  openai_responses_tool_adapt.py  passthrough.py
src/kllmgate/toolcall/: __init__.py  deepseek.py  deepseek_qwen.py  minimax_xml.py  qwen.py  standard.py
src/kllmgate/upstream/: client.py
tests/: test_app.py  test_config.py  test_converters.py  test_errors.py  test_models.py  test_pipeline.py  test_sse.py  test_thinking.py  test_tools.py  test_upstream.py
